Updated the working-directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,9 +45,9 @@ jobs:
       # Step 6: Terraform Init
       - name: Terraform Init
         run: terraform init
-        working-directory: /terraform
+        working-directory: ./terraform
 
       # Step 7: Terraform Apply
       - name: Terraform Apply
         run: terraform apply -auto-approve
-        working-directory: /terraform
+        working-directory: ./terraform
