Added terraform import

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
-      #Test Step: Verify GCP Auth
+      # Test Step: Verify GCP Auth
       - name: Test GCP project access
         run: gcloud projects describe ${{ secrets.GCP_PROJECT_ID }}
         env:
@@ -36,7 +36,19 @@ jobs:
         with:
           terraform_version: 1.5.6
 
-      # Step 5: Set environment variables
+      # Step 5: Import existing resources into Terraform state
+      - name: Import existing resources
+        env:
+          TF_VAR_GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
+        run: |
+          terraform init
+          terraform import google_service_account.sa "projects/${{ secrets.GCP_PROJECT_ID }}/serviceAccounts/sysdig-secure-lv7z@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com"
+          terraform import google_pubsub_topic.ingestion_topic "projects/${{ secrets.GCP_PROJECT_ID }}/topics/ingestion_topic"
+          terraform import google_project_iam_custom_role.custom_ingestion_auth_role "projects/${{ secrets.GCP_PROJECT_ID }}/roles/SysdigIngestionAuthRole"
+        working-directory: ./terraform
+
+      # Step 6: Terraform Init and Apply
       - name: Terraform Init and Apply
         env:
           TF_VAR_GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
@@ -48,4 +60,3 @@ jobs:
           terraform plan
           terraform apply -auto-approve
         working-directory: ./terraform
-        
