--- a/.github/workflows/cdr.yml
+++ b/.github/workflows/cdr.yml
@@ -1,4 +1,4 @@
-name: Enable CSPM and GCP Onboarding
+name: Apply the latest sink filter to GCP
 
 on:
   push:
@@ -41,10 +41,8 @@ jobs:
         env:
           TF_VAR_GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_GCP_REGION: ${{ secrets.GCP_REGION }}
-          TF_VAR_SYSDIG_SECURE_ENDPOINT_URL: ${{ secrets.SYSDIG_SECURE_ENDPOINT_URL }}
-          TF_VAR_SYSDIG_SECURE_API_TOKEN: ${{ secrets.SYSDIG_SECURE_API_TOKEN }}
         run: |
           terraform init
           terraform plan
           terraform apply -auto-approve
-        working-directory: ./terraform
+        working-directory: ./cdr
